fixed overlapping issues with before pseudo elements and button numbers

--- a/style.css
+++ b/style.css
@@ -93,12 +93,11 @@ button {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: center;
 }
 
 .title {
-  font-size: 8.6rem;
+  font-size: 7.4rem;
   color: #fff4e6;
   padding: 5rem 0;
   margin: 8rem 8rem 0 8rem;
@@ -137,7 +136,6 @@ button {
   font-family: inherit;
   text-align: center;
   color: #381c18;
-  z-index: 999;
   /*figure out this shitty border around the input box*/
   box-shadow: none;
 }
@@ -205,31 +203,29 @@ button {
 }
 
 .player-a::before {
-  content: "a";
+  content: "A";
   position: absolute;
-  font-size: 40rem;
+  font-size: 35rem;
   height: fit-content;
   width: fit-content;
   color: #fff4e6;
   opacity: 10%;
   left: 0;
   top: 0;
-  transform: translate(-60%);
-  z-index: 0;
+  transform: translate(-65%);
 }
 
 .player-b::before {
-  content: "b";
+  content: "B";
   position: absolute;
-  font-size: 40rem;
+  font-size: 35rem;
   height: fit-content;
   width: fit-content;
   color: #fff4e6;
   opacity: 10%;
   right: 0;
   top: 0;
-  transform: translate(60%);
-  z-index: 0;
+  transform: translate(65%);
 }
 
 .btn-numbers button {
